# datag.py

./: .editorconfig  .gitlab-ci.yml  ReadMe.md  pyproject.toml  setup.cfg
datag/: __init__.py
datag/core/: Entity.py  Record.py  Source.py  Spec.py  __init__.py  actions.py  exceptions.py  utils.py
