[build-system]
requires = ["setuptools>=61.2.0", "wheel", "setuptools_scm[toml]>=3.4.3"]
build-backend = "setuptools.build_meta"

[project]
name = "datag"
authors = [{name = "KOLANICH"}]
description = "Data cleansing, standardization and aggregation framework."
readme = "ReadMe.md"
keywords = ["data", "cleaning", "cleansing"]
license = {text = "Unlicense"}
classifiers = [
	"Programming Language :: Python",
	"Programming Language :: Python :: 3",
	"Development Status :: 4 - Beta",
	"Environment :: Other Environment",
	"Intended Audience :: Developers",
	"License :: Public Domain",
	"Operating System :: OS Independent",
]
urls = {Homepage = "https://codeberg.org/KOLANICH-ML/datag.py"}
requires-python = ">=3.4"
dynamic = ["version"]

[tool.setuptools]
zip-safe = false
include-package-data = true
packages = ["datag", "datag.core"]

[tool.setuptools_scm]
