[metadata]
name = datag
author = KOLANICH
url = https://gitlab.com/KOLANICH/datag.py
description = Data cleansing, standardization and aggregation framework.
long_description = file: ReadMe.md
keywords = data, cleaning, cleansing
license = Unlicense
classifiers =
	Programming Language :: Python
	Programming Language :: Python :: 3
	Development Status :: 4 - Beta
	Environment :: Other Environment
	Intended Audience :: Developers
	License :: Public Domain
	License :: Public Domain :: Unlicense
	Operating System :: OS Independent

[options]
python_requires = >=3.4
zip_safe = False
include_package_data = True
packages = datag, datag.core
setup_requires = setuptools>=42; wheel; setuptools_scm[toml]>=3.4.3
test_suite = tests.test

[build-system]
requires = ["setuptools", "setuptools_scm", "wheel"]
